修复插件太卡的问题